# oat_quick_start

./: .gitignore  CMakeLists.txt  appref.md  classifierref.md  conf.json  databaseref.md  editorref.md  imageref.md  oh-my-opencode.json  overview.md  storageref.md  thumbnailref.md
.sisyphus/: boulder.json
.sisyphus/plans/: image-classification-backend.md
database/: photo_metadata.db
src/: App.cpp  AppComponent.hpp
src/auth/: AuthManager.cpp  AuthManager.hpp  JwtHelper.cpp  JwtHelper.hpp  TokenStore.cpp  TokenStore.hpp
src/classifier/: ClassificationResult.hpp  ClassifierManager.cpp  ClassifierManager.hpp  ContentClassifier.cpp  ContentClassifier.hpp  ImageClassifier.hpp  SceneClassifier.cpp  SceneClassifier.hpp
src/config/: ConfigManager.cpp  ConfigManager.hpp
src/controller/: AuthController.hpp  MyController.hpp  PhotoController.hpp  UserController.hpp
src/db/: PhotoMetadataDb.cpp  PhotoMetadataDb.hpp
src/dto/: AuthDTOs.hpp  DTOs.hpp  PhotoDTOs.hpp
src/encrypt/: encrypt.cpp  encrypt.hpp
src/encrypto/: encrypto.hpp
src/image/: ImageLoader.cpp  ImageLoader.hpp
src/middleware/: AuthInterceptor.cpp  AuthInterceptor.hpp
src/resmanage/: ResManager.cpp  ResManager.hpp
src/service/: ImageEditor.cpp  ImageEditor.hpp  ThumbnailGenerator.cpp  ThumbnailGenerator.hpp
tests/: ApiTest.cpp  ResManagerTest.cpp  test_api.sh
tests/api/: PhotoApiTest.cpp
tests/classifier/: ImageClassifierTest.cpp
tests/e2e/: WorkflowTest.cpp
tests/service/: ImageServiceTest.cpp
